decafcomp/llvm/dev/err-return-type.llvm.bc.err
/usr/lib/llvm-8/bin/llvm-as: llvm/dev/err-return-type.llvm:6:7: error: value doesn't match function result type 'i1'
  ret i32 10
      ^
